# Thesis

BT/: BT_YSJ.files  behaviour.cpp  behaviour.h  btCommon.h  btFile.cpp  btFile.h  composites.cpp  composites.h
BT_leafs/: BT_leafs.files  Khepera_KIRK.files  conditions.h  kheperaActions.cpp  kheperaActions.h  kheperaConditions.cpp
BT_test/: CMakeLists.txt  bt_composite.cpp  bt_composite.h  bt_door.cpp  bt_door.h  bt_structure.cpp  bt_structure.h  main.cpp
Taxi_problem/: CMakeLists.txt  CMakeLists.txt~  Qlearning_initialiazation  agent.cpp  agent.h  main.cpp  position_struct.h  q_learning.cpp  q_learning.h  solution_method.cpp  solution_method.h  taxiworld.cpp  taxiworld.h
khepera/: CMakeLists.txt  blackboard.cpp  blackboard.h  bt_actions.cpp  bt_actions.h  bt_composite.cpp  bt_composite.h  bt_conditions.cpp  bt_conditions.h  bt_structure.cpp  bt_structure.h  bt_test.cpp  bt_test.h  bt_test_gp_kirk.cpp  bt_test_gp_kirk.h  helpfunctions.cpp  helpfunctions.h  khepera_agent.cpp  khepera_agent.h  khepera_agent_heading.cpp  khepera_agent_heading.h  khepera_agent_heading_bt.cpp  khepera_agent_heading_bt.h  khepera_test.cpp  khepera_test.h  load_files.cpp  load_files.h  main.cpp  posvec_struct.h  q_learning.cpp  q_learning.h  random_action.cpp  random_action.h  room.cpp  room.h  save_files.cpp  save_files.h  solution_method.cpp  solution_method.h  tom.cpp  (+2 more)
test_windygrid/build-test-Desktop_Qt_5_5_1_GCC_64bit-Default/: CMakeCache.txt  Makefile  Windygrid_RL_BT  Windygrid_RL_BT.cbp  cmake_install.cmake
test_windygrid/test/: CMakeLists.txt  agent.cpp  agent.h  bt_action.h  (+17 more)
(+4 files in other folders)
